# gnar-bar

./: .gitignore  Cargo.toml  DATABASE.md  Makefile.toml  beer_data.ts  item_data.ts  rollup.config.js  tsconfig.json
client/: .eslintrc.yml  README.md  item_data.ts  jest.config.js  package-lock.json  package.json  rollup.config.js
client/src/: app.scss  app.tsx  app_utils.tsx  core_types.ts  default_objects.ts
client/src/api/: index.ts  url.ts  utils.ts
client/src/components/selection/: selection.scss  selection_item.tsx  selection_list.tsx  types.ts
client/src/components/summary/: summary.scss  summary.tsx  summary_item.tsx  summary_items.tsx  types.ts
client/src/components/utils/: shared_utils.test.ts  shared_utils.ts  test_data.ts
client_alpine/: index.html
server/rust_actix/: Cargo.toml
server_rust_rocket/rust_rocket/: Cargo.toml
server_rust_rocket/rust_rocket/src/: main.rs
server_rust_rocket/rust_rocket/src/handlers/: mod.rs  user.rs
server_rust_rocket/rust_rocket/src/user/: mod.rs
src/: App.tsx  app.scss  app_utils.tsx  common_types.ts  core.ts  default_objects.ts  main.rs  types.ts
src/app_utils/: mod.rs
src/components/: session_summary.tsx
src/components/selection/: selection.scss  selection_item.tsx  selection_list.tsx  types.ts
src/components/summary/: summary.tsx  summary_item.tsx  summary_items.tsx  types.ts
src/components/utils/: shared_utils.test.ts  shared_utils.ts
src/dao/: beer.rs  mod.rs  producer.rs  snack.rs  wine.rs
src/db/: mod.rs
src/handlers/: beer.rs  mod.rs  producer.rs  snack.rs  utils.rs  wine.rs
src/models/: app.rs  db.rs  mod.rs  transformers.rs
src/queries/: mod.rs  producer.rs
src/responders/: mod.rs  producer.rs
src/services/: beer.rs  mod.rs  producer.rs  snack.rs  wine.rs
src/utils/: mod.rs
