[package]
name = "gnar_bar"
version = "0.1.0"
authors = ["Frank Meza <frankmezapdx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
futures = "0.3.8"
futures-util = "0.3.8"
json = "0.12.4"
postgres = "0.19.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_derive = "1.0.118"
serde_json = "1.0.61"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
tokio = "1.0.1"
tokio-postgres = "0.7.0"
