[package]
name = "gnar_bar"
version = "0.1.0"
authors = ["Frank Meza <frankmezapdx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0"
actix-cors = "0.2.0"
actix-rt = "1.0.0"
chrono = { version = "0.4", features = ["serde"] }
exitfailure = "0.5.1"
futures = "0.3.4"
futures-util = "0.3.4"
json = "0.12.1"
postgres = "0.19.1"
postgres-types = {version = "0.2.1", features = ["derive"]}
serde = { version = "1.0.118", features = ["derive"] }
serde_derive = "1.0.118"
serde_json = "1.0.60"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
tokio = { version = "0.2.13", features = ["full"] }
tokio-postgres = "0.5.2"